--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../dist/study.ico" type="image/ico">
+    <link rel="icon" href="study.ico" type="image/ico">
     <title>Todo</title>
 </head>
 
